--- a/app/src/main/res/layout/diaryframe.xml
+++ b/app/src/main/res/layout/diaryframe.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/diaryframe"
     android:layout_width="match_parent"
@@ -26,7 +27,7 @@
     <RelativeLayout
         android:id="@+id/btnSpeakContainer"
         android:layout_width="match_parent"
-        android:layout_height="116dp"
+        android:layout_height="173dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
         android:background="@drawable/gradients_cal"
@@ -37,8 +38,7 @@
         <Space
             android:layout_width="50dp"
             android:layout_height="1dp"
-            android:layout_weight="1">
-        </Space>
+            android:layout_weight="1"></Space>
 
         <ImageButton
             android:id="@+id/btnSpeak"
@@ -49,25 +49,27 @@
             android:background="@drawable/gradients"
             android:padding="6dp"
             android:src="@drawable/ic_baseline_mic_none_24" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1">
-        </Space>
+            android:layout_weight="1"></Space>
+
         <ImageButton
             android:id="@+id/btntext"
             android:layout_width="61dp"
             android:layout_height="60dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginRight="156dp"
+            android:layout_marginRight="100dp"
             android:background="@drawable/gradients"
             android:padding="6dp"
             android:src="@drawable/ic_baseline_volume_down_24" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1">
-        </Space>
+            android:layout_weight="1"></Space>
+
         <ImageButton
             android:id="@+id/btntran"
             android:layout_width="61dp"
@@ -77,11 +79,47 @@
             android:background="@drawable/gradients"
             android:padding="6dp"
             android:src="@drawable/ic_baseline_g_translate_24" />
+
+
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="93dp"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="132dp"
+            android:layout_height="37dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/gradhin"
+            android:text="SAVE"
+            app:backgroundTint="#331D98"
+            android:textColor="#fff"/>
         <Space
-            android:layout_width="0dp"
+            android:layout_width="50dp"
             android:layout_height="1dp"
-            android:layout_weight="1">
-        </Space>
+            android:layout_weight="1"></Space>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="126dp"
+            android:layout_height="37dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/gradhin"
+            android:text="CLEAR"
+            app:backgroundTint="#331D98"
+            android:textColor="#fff"/>
+        <Space
+            android:layout_width="50dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"></Space>
+
     </RelativeLayout>
 
 </RelativeLayout>
