--- a/app/src/main/res/layout/diaryframe.xml
+++ b/app/src/main/res/layout/diaryframe.xml
@@ -9,25 +9,72 @@
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="416dp"
         android:layout_above="@+id/btnSpeakContainer"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="75dp"
         android:padding="20dp">
 
         <EditText
             android:id="@+id/voiceInput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#80000000"
             android:fontFamily="casual"
-            android:textSize="18sp"
-            />
+            android:padding="10dp"
+            android:textSize="18sp">
+
+        </EditText>
+
     </ScrollView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="132dp"
+            android:layout_height="37dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/gradhin"
+            android:text="SAVE"
+            app:backgroundTint="#fff"
+            android:textColor="#000"
+            />
+        <Space
+            android:layout_width="50dp"
+            android:layout_height="1dp"
+            android:layout_weight="1">
+
+        </Space>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="126dp"
+            android:layout_height="37dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/gradhin"
+            android:text="CLEAR"
+            app:backgroundTint="#fff"
+            android:textColor="#000"/>
+        <Space
+            android:layout_width="50dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"></Space>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/btnSpeakContainer"
         android:layout_width="match_parent"
-        android:layout_height="173dp"
+        android:layout_height="103dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
         android:background="@drawable/gradients_cal"
@@ -83,43 +130,32 @@
 
 
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="93dp"
-        android:layout_alignParentBottom="true">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="57dp"
+        android:layout_height="57dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/ic_diary"
+        tools:ignore="VectorDrawableCompat" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="132dp"
-            android:layout_height="37dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/gradhin"
-            android:text="SAVE"
-            app:backgroundTint="#331D98"
-            android:textColor="#fff"/>
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"></Space>
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="126dp"
-            android:layout_height="37dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/gradhin"
-            android:text="CLEAR"
-            app:backgroundTint="#331D98"
-            android:textColor="#fff"/>
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"></Space>
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/datehead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/gradheads"
+        android:fontFamily="@font/paprika"
+        android:padding="15dp"
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+</RelativeLayout>
 
 </RelativeLayout>
