--- a/app/src/main/res/layout/diaryframe.xml
+++ b/app/src/main/res/layout/diaryframe.xml
@@ -14,16 +14,21 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="65dp"
         android:layout_marginBottom="75dp"
-        android:padding="20dp">
+        android:clickable="true"
+        android:overScrollMode="ifContentScrolls"
+        android:padding="20dp"
+        android:saveEnabled="true"
+        android:visibility="visible">
 
         <EditText
             android:id="@+id/voiceInput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#80000000"
+            android:background="@drawable/textborder2"
             android:fontFamily="casual"
             android:padding="10dp"
-            android:textSize="18sp">
+            android:textColor="#EBCCFF"
+            android:textSize="15sp">
 
         </EditText>
 
@@ -41,7 +46,9 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/gradhin"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/buttons"
             android:text="SAVE"
             app:backgroundTint="#fff"
             android:textColor="#000"
@@ -60,7 +67,9 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/gradhin"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/buttons"
             android:text="CLEAR"
             app:backgroundTint="#fff"
             android:textColor="#000"/>
@@ -130,32 +139,35 @@
 
 
     </RelativeLayout>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="57dp"
-        android:layout_height="57dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/ic_diary"
-        tools:ignore="VectorDrawableCompat" />
 
-    <TextView
-        android:id="@+id/datehead"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/gradheads"
-        android:fontFamily="@font/paprika"
-        android:padding="15dp"
-        android:text="TextView"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-</RelativeLayout>
+        android:layout_marginTop="5dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="2dp"
+            app:srcCompat="@drawable/ic_diary"
+            tools:ignore="VectorDrawableCompat" />
+
+        <TextView
+            android:id="@+id/datehead"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/gradheads"
+            android:fontFamily="@font/paprika"
+            android:padding="14dp"
+            android:text="TextView"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 </RelativeLayout>
