--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/abel</item>
+        <item>@font/allan</item>
         <item>@font/amatica_sc</item>
         <item>@font/amatica_sc_bold</item>
         <item>@font/chewy</item>
