--- a/app/src/main/res/layout/cardentry.xml
+++ b/app/src/main/res/layout/cardentry.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:padding="10dp"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="15dp"
-    android:layout_height="100dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="2dp"
+    android:layout_height="wrap_content"
     android:elevation="10dp"
     >
 
+
     <RelativeLayout
-        android:id="@+id/cards"
+    android:id="@+id/cards"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="8dp"
         android:background="@drawable/cardgrad"
-        android:padding="8dp">
+        android:animateLayoutChanges="true">
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -27,48 +31,50 @@
             android:fontFamily="@font/allan"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:textColor="#070810"
+            android:text="hei"
+            android:textColor="#000000"
             android:textSize="25sp"
-            android:textStyle="bold" />Z
+            android:textStyle="bold"
+            tools:ignore="MissingConstraints" />
 
-        <ImageButton
+        <TextView
             android:id="@+id/del"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
-            android:background="@drawable/textborder2"
             android:padding="10dp"
-            android:src="@drawable/ic_baseline_delete_outline_24"></ImageButton>
+            android:text="DELETE"
+            android:textColor="#03a1fc"
+            android:textStyle="bold"
 
-        <ImageButton
+            tools:ignore="MissingConstraints" />
+
+        <TextView
             android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/del"
-            android:background="@drawable/textborder2"
             android:padding="10dp"
-            android:src="@drawable/ic_baseline_create_24"></ImageButton>
+            android:textColor="#03a1fc"
+            android:textStyle="bold"
+            android:text="EDIT"
+            tools:ignore="MissingConstraints" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_below="@+id/textViewTitle"
-            >
             <TextView
                 android:id="@+id/texts"
-                android:fontFamily="@font/allan"
-                android:textSize="18sp"
-                android:layout_width="match_parent"
+                android:textSize="15sp"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_below="@id/textViewTitle"
+                android:layout_width="wrap_content"
+                android:background="@drawable/cardgrad2"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:textColor="@color/white"
-                android:maxLines="2"       />
-        </LinearLayout>
+                android:text="hello"
+                android:maxLines="2"
+                tools:ignore="MissingConstraints" />
     </RelativeLayout>
-
-
 </androidx.cardview.widget.CardView>
