--- a/app/src/main/res/layout/diaryframe.xml
+++ b/app/src/main/res/layout/diaryframe.xml
@@ -145,6 +145,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="0dp">
 
         <ImageView
