--- a/app/src/main/res/drawable/textborder3.xml
+++ b/app/src/main/res/drawable/textborder3.xml
@@ -3,14 +3,16 @@
     android:shape="rectangle" >
 
     <!-- View background color -->
-    <solid
-        android:color="#70000000" >
-    </solid>
+    <gradient
+        android:startColor="#000000"
+        android:centerColor="#200A4A"
+        android:endColor="#3C276C">
+    </gradient>
 
     <!-- View border color and width -->
     <stroke
-        android:width="1dp"
-        android:color="#9940FF" >
+        android:width="2dp"
+        android:color="#ED33E4" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
