--- a/app/src/main/res/layout/cardentry.xml
+++ b/app/src/main/res/layout/cardentry.xml
@@ -27,13 +27,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:background="@drawable/cardgrad"
-            android:fontFamily="@font/allan"
+            android:background="@drawable/cardgrad2"
+            android:fontFamily="@font/abel"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="hei"
-            android:textColor="#000000"
-            android:textSize="25sp"
+            android:textColor="#fff"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="MissingConstraints" />
 
@@ -41,14 +41,15 @@
 
             <TextView
                 android:id="@+id/texts"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
                 android:layout_below="@id/textViewTitle"
                 android:layout_width="match_parent"
-                android:background="@drawable/cardgrad2"
+                android:background="@drawable/textborder2"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
+                android:fontFamily="@font/abel"
                 android:text="hello"
                 android:maxLines="2"
                 tools:ignore="MissingConstraints" />
@@ -62,28 +63,31 @@
 
             <TextView
                 android:id="@+id/del"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
-                android:padding="10dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/gradheads"
+                android:padding="5dp"
                 android:text="DELETE"
-                android:textColor="#03a1fc"
+                android:textColor="#FFFFFF"
                 android:textStyle="bold"
-
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/edit"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/gradheads"
                 android:layout_toLeftOf="@+id/del"
-                android:padding="10dp"
-                android:textColor="#03a1fc"
+                android:padding="5dp"
+                android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 android:text="EDIT"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:gravity="center_horizontal" />
         </LinearLayout>
     </RelativeLayout>
 
