--- a/app/src/main/res/layout/cardentry.xml
+++ b/app/src/main/res/layout/cardentry.xml
@@ -272,7 +272,7 @@
                 android:gravity="center_horizontal" />
 
             <TextView
-                android:id="@+id/nsfw"
+                android:id="@+id/nsfwr"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
